# Instrumental-Cluster-

instrumentcluster_veb4/: README.md
instrumentcluster_veb4/VeB_InstrumentCluster/: CMakeLists.txt  main.cpp  main.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/CarModel/: CMakeLists.txt  CentralCarModel.qml  SplashScreen.qml  Tesla3dModel.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/CarModel/include/: carmodelcontroller.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/CarModel/meshes/: _plastic_black_124_black_lights_0_0_mesh.mesh  _satin_black_134_black_lights_0_0_mesh.mesh  aluminium2_aluminium2_0_0_mesh.mesh  aluminium_light_aluminium_light_0_0_mesh.mesh  aluminium_movsteer_1_0_1_0_mesh.mesh  back_chrome_light_back_chrome_light_0_0_mesh.mesh  base_dvorright_0_0_mesh.mesh  belt_belt_0_0_mesh.mesh  black_001_Plastic_0_0_mesh.mesh  black_002_Plastic_0_0_mesh.mesh  black_003_black_lights_0_0_mesh.mesh  black_004_JUST_BLACK_0_0_mesh.mesh  black_005_black_lights_0_0_mesh.mesh  black_black_lights_0_0_mesh.mesh  black_boot_black_lights_0_0_mesh.mesh  black_lights_black_lights_0_0_mesh.mesh  body_primary_0_mesh.mesh  bodysills_primary_001_0_mesh.mesh  bonnet_ok_primary_0_mesh.mesh  boot_primary_0_mesh.mesh  breake_int_breaklight_l_0_mesh.mesh  cahrome_movsteer_1_0_1_0_mesh.mesh  carpet_Carpet_0_0_mesh.mesh  carpet_Light_Carpet_Light_0_0_mesh.mesh  chassis_chassis_0_0_mesh.mesh  chrome1_movsteer_1_0_1_0_mesh.mesh  chrome2_movsteer_1_0_1_0_mesh.mesh  chromeBELT_movsteer_1_0_1_0_mesh.mesh  chrome_001_movsteer_1_0_1_0_mesh.mesh  chrome_002_back_chrome_light_0_0_mesh.mesh  chrome_Lights_head_l_left_front_light_0_mesh.mesh  chrome_Lights_head_l_right_front_light_0_mesh.mesh  chrome__movsteer_1_0_1_0_mesh.mesh  chrome_bonnet_ok_movsteer_1_0_1_0_mesh.mesh  chrome_foglight_l_foglight_l_0_mesh.mesh  chrome_foglight_r_foglight_r_0_mesh.mesh  chrome_light_back_chrome_light_0_0_mesh.mesh  chrome_movsteer_1_0_1_0_mesh.mesh  door_lf_JUST_BLACK_0_0_mesh.mesh  door_lf_Plastic_0_0_mesh.mesh  (+136 more)
instrumentcluster_veb4/VeB_InstrumentCluster/libs/CarModel/src/: carmodelcontroller.cpp
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICMain/: BatteryMeter.qml  BoundaryBox.qml  CMakeLists.txt  DateTime.qml  ICHomescreen.qml  IndicatorPopup.qml  MenuSection.qml  Odometer.qml  RangeMeter.qml  RegenMeter.qml  SpeedoMeter.qml  Styles.qml  WeatherPage.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICMain/include/: WeatherInfo.h  indicatorpopup.h  iniconfiguration.h  keyhandler.h  maincontroller.h  vehiclemetrics.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICMain/src/: WeatherApi.cpp  WeatherInfo.cpp  indicatorpopup.cpp  iniconfiguration.cpp  keyhandler.cpp  maincontroller.cpp  vehiclemetrics.cpp
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICSimulation/: CMakeLists.txt
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICSimulation/include/: simulationcontroller.h  speedsimulator.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/ICSimulation/src/: speedsimulator.cpp
instrumentcluster_veb4/VeB_InstrumentCluster/libs/Navigation/: CMakeLists.txt  NavigationMap.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/Navigation/include/: navigationcontroller.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/Navigation/src/: navigationcontroller.cpp
instrumentcluster_veb4/VeB_InstrumentCluster/libs/TripInfo/: CMakeLists.txt  CustomTripElement.qml  TripInfo.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/TripInfo/include/: tripdata.h  tripinfocontroller.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/TripInfo/src/: tripdata.cpp  tripinfocontroller.cpp
instrumentcluster_veb4/VeB_InstrumentCluster/libs/WarningIndicators/: GearStateIndicator.qml  IndicatorComponent.qml  WarningIndicators.qml
instrumentcluster_veb4/VeB_InstrumentCluster/libs/WarningIndicators/include/: warningindicatorcontroller.h
instrumentcluster_veb4/VeB_InstrumentCluster/libs/WarningIndicators/src/: warningindicatorcontroller.cpp
