qt_add_library(CarModel STATIC)

set(carModelHeader
    include/carmodelcontroller.h)

set(carModelSource
   src/carmodelcontroller.cpp)

qt_add_qml_module(
    CarModel
    URI "CarModel"
    VERSION 1.0

    QML_FILES
    CentralCarModel.qml
    SplashScreen.qml
    Tesla3dModel.qml

    RESOURCES
    Image/MainCarImg.png
    Image/SecCarImg.png
    Image/FogOverlay.png
    Image/whiteRoad.png
    Image/TransparentRoad.png
    Image/splashScreenLogo.png
    Image/Emitter.png
    Image/veroltGlowingText.png
    Image/veroltLogo.png
    Image/veroltSolidText.png


    maps/back_chrome_light.0_baseColor.png
    maps/belt.0_baseColor.png
    maps/CarbonBase.png
    maps/dvorright.0_baseColor.png
    maps/glass.0_baseColor.png
    maps/glass.1_baseColor.png
    maps/hub_rb.0_baseColor.png
    maps/hub_rf.1_baseColor.png
    maps/LCDs.0_baseColor.png
    maps/light_pantulan.0_baseColor.png
    maps/movsteer_1.0.0_baseColor.png
    maps/movsteer_1.0.1_baseColor.png
    maps/pantulans.0_baseColor.png
    maps/primary.001_baseColor.png
    maps/primary.002_baseColor.png
    maps/Putih.0_baseColor.png
    maps/right_rear_light_baseColor.png
    maps/tembus_red.0_baseColor.png
    maps/texture_Buttons.0_baseColor.png
    maps/wheels.2_baseColor.png
    maps/wheels.3_baseColor.png
    maps/wheels.4_baseColor.png
    maps/wheels.6_baseColor.png
    meshes/_plastic_black_124_black_lights_0_0_mesh.mesh
    meshes/_satin_black_134_black_lights_0_0_mesh.mesh
    meshes/aluminium2_aluminium2_0_0_mesh.mesh
    meshes/aluminium_light_aluminium_light_0_0_mesh.mesh
    meshes/aluminium_movsteer_1_0_1_0_mesh.mesh
    meshes/back_chrome_light_back_chrome_light_0_0_mesh.mesh
    meshes/base_dvorright_0_0_mesh.mesh
    meshes/belt_belt_0_0_mesh.mesh
    meshes/black_001_Plastic_0_0_mesh.mesh
    meshes/black_002_Plastic_0_0_mesh.mesh
    meshes/black_003_black_lights_0_0_mesh.mesh
    meshes/black_004_JUST_BLACK_0_0_mesh.mesh
    meshes/black_005_black_lights_0_0_mesh.mesh
    meshes/black_black_lights_0_0_mesh.mesh
    meshes/black_boot_black_lights_0_0_mesh.mesh
    meshes/black_lights_black_lights_0_0_mesh.mesh
    meshes/body_primary_0_mesh.mesh
    meshes/bodysills_primary_001_0_mesh.mesh
    meshes/bonnet_ok_primary_0_mesh.mesh
    meshes/boot_primary_0_mesh.mesh
    meshes/breake_int_breaklight_l_0_mesh.mesh
    meshes/cahrome_movsteer_1_0_1_0_mesh.mesh
    meshes/carpet_Carpet_0_0_mesh.mesh
    meshes/carpet_Light_Carpet_Light_0_0_mesh.mesh
    meshes/chassis_chassis_0_0_mesh.mesh
    meshes/chrome1_movsteer_1_0_1_0_mesh.mesh
    meshes/chrome2_movsteer_1_0_1_0_mesh.mesh
    meshes/chrome_001_movsteer_1_0_1_0_mesh.mesh
    meshes/chrome_002_back_chrome_light_0_0_mesh.mesh
    meshes/chrome__movsteer_1_0_1_0_mesh.mesh
    meshes/chrome_bonnet_ok_movsteer_1_0_1_0_mesh.mesh
    meshes/chrome_foglight_l_foglight_l_0_mesh.mesh
    meshes/chrome_foglight_r_foglight_r_0_mesh.mesh
    meshes/chrome_light_back_chrome_light_0_0_mesh.mesh
    meshes/chrome_Lights_head_l_left_front_light_0_mesh.mesh
    meshes/chrome_Lights_head_l_right_front_light_0_mesh.mesh
    meshes/chrome_movsteer_1_0_1_0_mesh.mesh
    meshes/chromeBELT_movsteer_1_0_1_0_mesh.mesh
    meshes/door_lf_aluminium2_0_0_mesh.mesh
    meshes/door_lf_door_lf_0_0_mesh.mesh
    meshes/door_lf_door_lf_5_0_mesh.mesh
    meshes/door_lf_dvorright_0_0_mesh.mesh
    meshes/door_lf_glass_0_0_mesh.mesh
    meshes/door_lf_JUST_BLACK_0_0_mesh.mesh
    meshes/door_lf_mirror_inside_0_0_mesh.mesh
    meshes/door_lf_movsteer_1_0_0_0_mesh.mesh
    meshes/door_lf_movsteer_1_0_1_0_mesh.mesh
    meshes/door_lf_ok_primary_0_mesh.mesh
    meshes/door_lf_Plastic_0_0_mesh.mesh
    meshes/door_lf_primary_002_0_mesh.mesh
    meshes/door_lf_primary_0_mesh.mesh
    meshes/door_lf_Putih_0_0_mesh.mesh
    meshes/door_lf_texture_Buttons_0_0_mesh.mesh
    meshes/door_lr_aluminium2_0_0_mesh.mesh
    meshes/door_lr_dvorright_0_0_mesh.mesh
    meshes/door_lr_glass_0_0_mesh.mesh
    meshes/door_lr_JUST_BLACK_0_0_mesh.mesh
    meshes/door_lr_movsteer_1_0_0_0_mesh.mesh
    meshes/door_lr_movsteer_1_0_1_0_mesh.mesh
    meshes/door_lr_ok_primary_0_mesh.mesh
    meshes/door_lr_Plastic_0_0_mesh.mesh
    meshes/door_lr_primary_002_0_mesh.mesh
    meshes/door_lr_primary_004_0_mesh.mesh
    meshes/door_lr_primary_0_mesh.mesh
    meshes/door_lr_Putih_0_0_mesh.mesh
    meshes/door_lr_texture_Buttons_0_0_mesh.mesh
    meshes/door_rf_aluminium2_0_0_mesh.mesh
    meshes/door_rf_door_lf_0_0_mesh.mesh
    meshes/door_rf_dvorright_0_0_mesh.mesh
    meshes/door_rf_glass_0_0_mesh.mesh
    meshes/door_rf_JUST_BLACK_0_0_mesh.mesh
    meshes/door_rf_mirror_inside_0_0_mesh.mesh
    meshes/door_rf_movsteer_1_0_0_0_mesh.mesh
    meshes/door_rf_movsteer_1_0_1_0_mesh.mesh
    meshes/door_rf_ok_primary_0_mesh.mesh
    meshes/door_rf_Plastic_0_0_mesh.mesh
    meshes/door_rf_primary_002_0_mesh.mesh
    meshes/door_rf_primary_0_mesh.mesh
    meshes/door_rf_Putih_0_0_mesh.mesh
    meshes/door_rf_texture_Buttons_0_0_mesh.mesh
    meshes/door_rr_aluminium2_0_0_mesh.mesh
    meshes/door_rr_dvorright_0_0_mesh.mesh
    meshes/door_rr_glass_0_0_mesh.mesh
    meshes/door_rr_JUST_BLACK_0_0_mesh.mesh
    meshes/door_rr_movsteer_1_0_0_0_mesh.mesh
    meshes/door_rr_movsteer_1_0_1_0_mesh.mesh
    meshes/door_rr_ok_primary_002_0_mesh.mesh
    meshes/door_rr_Plastic_0_0_mesh.mesh
    meshes/door_rr_primary_002_0_mesh.mesh
    meshes/door_rr_primary_0_mesh.mesh
    meshes/door_rr_Putih_0_0_mesh.mesh
    meshes/door_rr_texture_Buttons_0_0_mesh.mesh
    meshes/dvorleft_dvorright_0_0_mesh.mesh
    meshes/dvorright_dvorright_0_0_mesh.mesh
    meshes/foglights_l_foglight_l_0_mesh.mesh
    meshes/foglights_r_foglight_r_0_mesh.mesh
    meshes/front_black_front_black_0_0_mesh.mesh
    meshes/front_bumper_ok_primary_0_mesh.mesh
    meshes/frunkplastic_dvorright_0_0_mesh.mesh
    meshes/glass_glass_0_0_mesh.mesh
    meshes/glass_glass_1_0_mesh.mesh
    meshes/hitam_001_dvorright_0_0_mesh.mesh
    meshes/hitam_002_hitam_0_0_mesh.mesh
    meshes/hitam_003_dvorright_0_0_mesh.mesh
    meshes/hitam_004_dvorright_0_0_mesh.mesh
    meshes/hitam_005_Plastic_0_0_mesh.mesh
    meshes/hitam_006_black_lights_0_0_mesh.mesh
    meshes/hitam_dvorright_0_0_mesh.mesh
    meshes/hub_lb_hub_rb_0_0_mesh.mesh
    meshes/hub_lf_hub_rf_0_0_mesh.mesh
    meshes/hub_lf_hub_rf_1_0_mesh.mesh
    meshes/hub_rb_hub_rb_0_0_mesh.mesh
    meshes/hub_rf_hub_rf_0_0_mesh.mesh
    meshes/hub_rf_hub_rf_1_0_mesh.mesh
    meshes/indicator_lights_l_indicator_lf_0_mesh.mesh
    meshes/indicator_lights_r_indicator_rf_0_mesh.mesh
    meshes/interiorlights_light_night_0_mesh.mesh
    meshes/just_BLACK_001_JUST_BLACK_0_0_mesh.mesh
    meshes/just_BLACK_JUST_BLACK_0_0_mesh.mesh
    meshes/lcds_LCDs_0_0_mesh.mesh
    meshes/leather_white_Seat_Leather_white_0_0_mesh.mesh
    meshes/light_breake_breaklight_l_0_mesh.mesh
    meshes/light_pantulan_light_pantulan_0_0_mesh.mesh
    meshes/light_turn_lr_boot_indicator_lr_0_mesh.mesh
    meshes/light_turn_rr_boot_indicator_rr_0_mesh.mesh
    meshes/lightrevese_boot_revlight_L_0_mesh.mesh
    meshes/mirror_inside_mirror_inside_0_0_mesh.mesh
    meshes/movsteer_1_0_dvorright_0_0_mesh.mesh
    meshes/movsteer_1_0_movsteer_1_0_0_0_mesh.mesh
    meshes/movsteer_1_0_movsteer_1_0_1_0_mesh.mesh
    meshes/paint_black_dvorright_0_0_mesh.mesh
    meshes/pantulans_pantulans_0_0_mesh.mesh
    meshes/plastic_Plastic_0_0_mesh.mesh
    meshes/platnomor_hitam_0_0_mesh.mesh
    meshes/platnomor_JUST_BLACK_0_0_mesh.mesh
    meshes/platnomor_platnomor_1_0_mesh.mesh
    meshes/platnomor_platnomor_2_0_mesh.mesh
    meshes/putih_001_Putih_0_0_mesh.mesh
    meshes/putih_002_Putih_0_0_mesh.mesh
    meshes/putih_Putih_0_0_mesh.mesh
    meshes/rear_bumper_movsteer_1_0_1_0_mesh.mesh
    meshes/rear_bumper_ok_primary_0_mesh.mesh
    meshes/rear_lights_right_rear_light_0_mesh.mesh
    meshes/rear_lightsl_left_rear_light_0_mesh.mesh
    meshes/rear_lightsr_right_rear_light_0_mesh.mesh
    meshes/satin_red_satin_red_0_0_mesh.mesh
    meshes/seat_Leather_white_Seat_Leather_white_0_0_mesh.mesh
    meshes/suspensi2_suspensi_0_0_mesh.mesh
    meshes/suspensi2_suspensi_1_0_mesh.mesh
    meshes/suspensi_suspensi_0_0_mesh.mesh
    meshes/suspensi_suspensi_1_0_mesh.mesh
    meshes/tembus_belakang_tembus_red_0_0_mesh.mesh
    meshes/tembus_boot_ok_tembus_red_0_0_mesh.mesh
    meshes/tembus_depan_ok_tembus_red_0_0_mesh.mesh
    meshes/tembus_red_tembus_red_0_0_mesh.mesh
    meshes/texture_Buttons_texture_Buttons_0_0_mesh.mesh
    meshes/texture_Leather_001_movsteer_1_0_0_0_mesh.mesh
    meshes/texture_Leather_movsteer_1_0_0_0_mesh.mesh
    meshes/turn_indicat_l_indicator_lf_0_mesh.mesh
    meshes/turn_indicat_r_indicator_rf_0_mesh.mesh
    meshes/wheels_001_movsteer_1_0_1_0_mesh.mesh
    meshes/wheels_001_wheels_0_0_mesh.mesh
    meshes/wheels_001_wheels_1_0_mesh.mesh
    meshes/wheels_001_wheels_2_0_mesh.mesh
    meshes/wheels_001_wheels_3_0_mesh.mesh
    meshes/wheels_001_wheels_4_0_mesh.mesh
    meshes/wheels_001_wheels_6_0_mesh.mesh
    meshes/wheels_movsteer_1_0_1_0_mesh.mesh
    meshes/wheels_wheels_0_0_mesh.mesh
    meshes/wheels_wheels_1_0_mesh.mesh
    meshes/wheels_wheels_2_0_mesh.mesh
    meshes/wheels_wheels_3_0_mesh.mesh
    meshes/wheels_wheels_4_0_mesh.mesh
    meshes/wheels_wheels_6_0_mesh.mesh
    meshes/whiteleather_Putih_0_0_mesh.mesh
    meshes/windscreen_ok_glass_0_0_mesh.mesh

    textures/back_chrome_light.0_baseColor.png
    textures/belt.0_baseColor.png
    textures/dvorright.0_baseColor.png
    textures/glass.0_baseColor.png
    textures/glass.1_baseColor.png
    textures/hub_rb.0_baseColor.png
    textures/hub_rf.1_baseColor.png
    textures/LCDs.0_baseColor.png
    textures/light_pantulan.0_baseColor.png
    textures/movsteer_1.0.0_baseColor.png
    textures/movsteer_1.0.1_baseColor.png
    textures/pantulans.0_baseColor.png
    textures/primary.001_baseColor.png
    textures/primary.002_baseColor.png
    textures/Putih.0_baseColor.png
    textures/right_rear_light_baseColor.png
    textures/tembus_red.0_baseColor.png
    textures/texture_Buttons.0_baseColor.png
    textures/wheels.2_baseColor.png
    textures/wheels.3_baseColor.png
    textures/wheels.4_baseColor.png
    textures/wheels.6_baseColor.png

    SOURCES
    ${carModelHeader}
    ${carModelSource}
)

target_link_libraries(
    CarModel
    PRIVATE
    Qt6::Quick
    Qt6::Core
    Qt::Gui
    Qt6::qquick3dplugin
    Qt6::qtquick3dhelpersplugin

    PUBLIC
    Navigationplugin
)
